Fix Thesis color scheme in dark mode

--- a/assets/styles/error.css
+++ b/assets/styles/error.css
@@ -11,6 +11,12 @@ html.thesis {
 	min-height: 100%;
 	background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23007297' fill-rule='evenodd'%3E%3Cellipse cx='14.5' cy='34.5' rx='2.5' ry='2.5'/%3E%3Cellipse cx='24.5' cy='34.5' rx='2.5' ry='2.5'/%3E%3Cellipse cx='34.5' cy='24.5' rx='2.5' ry='2.5'/%3E%3Cellipse cx='24.5' cy='24.5' rx='2.5' ry='2.5'/%3E%3Cellipse cx='14.5' cy='14.5' rx='2.5' ry='2.5'/%3E%3Cellipse cx='4.5' cy='14.5' rx='2.5' ry='2.5'/%3E%3Cellipse cx='4.5' cy='4.5' rx='2.5' ry='2.5'/%3E%3Cellipse cx='34.5' cy='4.5' rx='2.5' ry='2.5'/%3E%3C/g%3E%3C/svg%3E"); /* images/dot.svg (URI encoded) */
 	background-size: 40px;
+
+	@media (prefers-color-scheme: dark) {
+	:root {
+		--text-color: var(--darkgrey);
+	}
+	}
 }
 
 
@@ -30,7 +36,7 @@ main {
 	box-shadow: inset 0 -5px 30px rgba(68, 68, 68, 0.1);
 	padding: var(--space-l3);
 	border: 5px solid #E6E8EB;
-	
+
 	.thesis & {
 		background-color: #FBFBFB;
 	}
@@ -47,11 +53,11 @@ h1 {
 	font: normal 8em/0.6 'acier-bat', var(--font-fam);
 	color: var(--blue);
 	margin: 0 auto var(--space-l2);
-	
+
 	.scott-shares & {
 		font-size: 4.75em;
 	}
-	
+
 	.thesis & {
 		font-family: 'caslon-graphique', var(--font-fam);
 		font-size: 3em;
